--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@netlify/next": "^1.4.9",
     "next": "13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
